# amd-comgr-helpers

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.devcontainer/: devcontainer.json  dockerfile
.github/workflows/: test.yml
cmake/modules/: amd_comgr.cmake
docker/: dockerfile
requirements/: requirements.python.txt  requirements.system.txt
tests/tools/: CMakeLists.txt  test_parse_code_metadata.py
tools/: CMakeLists.txt  parse_code_metadata.cpp  parse_code_metadata.hpp  parse_code_metadata.py
